--- a/laab/src/index.css
+++ b/laab/src/index.css
@@ -2,6 +2,8 @@ html, body {
   overflow-y: auto;
   max-width: 100%;
   overflow-x: hidden;
+  overflow-x: hidden; 
+  width: 100%;
    margin: 0;
   padding: 0;
   font-family: sans-serif;
